--- a/static/registerpage.html
+++ b/static/registerpage.html
@@ -346,8 +346,8 @@
     <div class="register-title">Create Account</div>
     
     <div class="input-group">
-      <label for="fullname">Full Name</label>
-      <input class="register-input" type="text" id="fullname" name="fullname" placeholder="Enter your full name" required />
+      <label for="fullname">Username</label>
+      <input class="register-input" type="text" id="username" name="username" placeholder="Enter your username" required />
     </div>
     
     <div class="input-group">
